# drf-api-permissions-postgres

./: README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
books_api/: models.py  permissions.py  views.py
books_api/migrations/: 0001_initial.py
books_api_project/: asgi.py  settings.py  urls.py  wsgi.py
